# mda

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mda.py  pyproject.toml  requirements.txt  test.py
benchmark/: benchmark.py  long_context_benchmark.py  long_context_benchmark_v2.py
benchmark/full_benchmark/: ablation_study.py  requests_lib.md  ultimate_benchmark.json  ultimate_runner.py  veloria_economy.md  veloria_geography.md  veloria_science.md  zephyria.md
benchmark/memory_test/: zephyria.md  zephyria_benchmark.json  zephyria_test.py
core/: encoder.py  entity.py  neuron.py  registry.py
data/: __init__.py
examples/: agent_dialogue.py
inference/: associative.py  broca.py  memory.py  reasoning.py  translator.py
integrations/: cli.py  engine.py  loader.py
mda/: __init__.py  mda.py
mda/core/: accelerator.py  bind.py  encoder.py  entity.py  event.py  neuron.py  registry.py
mda/data/: stopwords_content.txt
mda/inference/: associative.py  broca.py  memory.py  reasoning.py  translator.py
mda/integrations/: cli.py  engine.py  loader.py  mcp_server.py  owui_function.py
mda/training/: checkpoint.py
tests/: conftest.py  test_associative.py  test_bind.py  test_broca.py  test_encoder.py  test_engine.py  test_entity.py  test_event.py  test_gpu_port.py  test_mda.py  test_memory.py  test_neuron.py  test_reasoning.py  test_registry.py
training/: checkpoint.py
